Improve test compatibility across Java versions with javap and Java 8 collections