@@ -5,9 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
-import java.lang.classfile.ClassFile;
-import java.lang.classfile.ClassModel;
-import java.lang.reflect.AccessFlag;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -23,8 +21,6 @@ import org.junit.jupiter.api.io.TempDir;
  * value-class semantics.
  */
 class AutoValhallaSourceTransformerTest {
-
-    private static final int ACC_IDENTITY = 0x0020;
 
     private static String javacPath;
     private static String apiJar;
@@ -54,53 +50,53 @@ class AutoValhallaSourceTransformerTest {
         copyFixture(src.resolve("fixture/Shade.java"), "fixture/Shade.java");
 
         AutoValhallaSourceTransformer.Result result = AutoValhallaSourceTransformer.transform(
-                List.of(src.toString()),
-                List.of("fixture"),
-                List.of(),
+                java.util.Collections.singletonList(src.toString()),
                 28,
                 classes.toFile(),
                 target.toFile(),
                 javacPath,
                 processorPath,
-                List.of(apiJar));
+                java.util.Collections.singletonList(apiJar));
 
-        assertEquals(2, result.convertedCount(), "Point and Shade both convert");
+        assertEquals(1, result.convertedCount(), "only the annotated Point converts");
         assertTrue(result.annotationFailures().isEmpty());
-        assertTrue(result.includesFailures().isEmpty());
 
         Path versionedPoint = classes.resolve("META-INF/versions/28/fixture/Point.class");
         assertTrue(Files.isRegularFile(versionedPoint));
-        assertTrue(Files.isRegularFile(classes.resolve("META-INF/versions/28/fixture/Shade.class")));
+        assertFalse(Files.exists(classes.resolve("META-INF/versions/28/fixture/Shade.class")),
+                "an unannotated class must not be converted");
 
-        ClassModel model = ClassFile.of().parse(Files.readAllBytes(versionedPoint));
-        assertEquals(72, model.majorVersion());
-        assertEquals(65535, model.minorVersion());
-        assertFalse((model.flags().flagsMask() & ACC_IDENTITY) != 0,
-                "identity flag must be cleared on the versioned class");
-        assertTrue(model.flags().has(AccessFlag.FINAL), "value class must be final");
+        byte[] bytes = Files.readAllBytes(versionedPoint);
+        int minor = ((bytes[4] & 0xFF) << 8) | (bytes[5] & 0xFF);
+        int major = ((bytes[6] & 0xFF) << 8) | (bytes[7] & 0xFF);
+        assertEquals(72, major);
+        assertEquals(65535, minor);
+
+        String javapOut = javap(versionedPoint);
+        assertTrue(javapOut.contains("value class fixture.Point") || javapOut.contains("class fixture.Point"));
+        assertTrue(javapOut.contains("ACC_FINAL"), "value class must be final");
+        assertFalse(javapOut.contains("ACC_SUPER"), "value classes do not have ACC_SUPER");
     }
 
     @Test
-    void interpretedClassFailureIsAttributedToItsSelectionSource() throws Exception {
+    void rejectedClassIsReportedAsAnnotationFailure() throws Exception {
         Path src = temp.resolve("src");
         Path classes = temp.resolve("classes");
         Path target = temp.resolve("target");
         Files.createDirectories(src.resolve("fixture"));
-        // Point: annotation-selected, compiles. SyncPoint: annotation-selected,
-        // rejected by javac (value class cannot declare synchronized methods).
+        // Point: compiles. SyncPoint: rejected by javac (a value class cannot
+        // declare synchronized methods).
         copyFixture(src.resolve("fixture/Point.java"), "fixture/Point.java");
         copyFixture(src.resolve("fixture/SyncPoint.java"), "fixture/SyncPoint.java");
 
         AutoValhallaSourceTransformer.Result result = AutoValhallaSourceTransformer.transform(
-                List.of(src.toString()),
-                List.of("fixture"),
-                List.of(),
+                java.util.Collections.singletonList(src.toString()),
                 28,
                 classes.toFile(),
                 target.toFile(),
                 javacPath,
                 processorPath,
-                List.of(apiJar));
+                java.util.Collections.singletonList(apiJar));
 
         assertEquals(1, result.convertedCount(), "only Point converts");
         assertEquals(1, result.annotationFailures().size());
@@ -111,34 +107,32 @@ class AutoValhallaSourceTransformerTest {
                 "nothing may be written for a rejected class");
     }
 
-    @Test
-    void excludesOverrideEverything() throws Exception {
-        Path src = temp.resolve("src");
-        Path classes = temp.resolve("classes");
-        Path target = temp.resolve("target");
-        Files.createDirectories(src.resolve("fixture"));
-        copyFixture(src.resolve("fixture/Point.java"), "fixture/Point.java");
-
-        AutoValhallaSourceTransformer.Result result = AutoValhallaSourceTransformer.transform(
-                List.of(src.toString()),
-                List.of("fixture"),
-                List.of("fixture.Point"),
-                28,
-                classes.toFile(),
-                target.toFile(),
-                javacPath,
-                processorPath,
-                List.of(apiJar));
-
-        assertEquals(0, result.convertedCount());
-        assertFalse(Files.exists(classes.resolve("META-INF/versions")));
-    }
-
     private static void copyFixture(Path destination, String resource) throws Exception {
         // fixtures live in src/test/java (not in test resources), so read them
         // from the project source tree rather than the classpath
-        Path sourceFixture = Path.of("src", "test", "java", resource);
+        Path sourceFixture = java.nio.file.Paths.get("src", "test", "java", resource);
         assertTrue(Files.isRegularFile(sourceFixture), resource + " fixture must exist");
         Files.write(destination, Files.readAllBytes(sourceFixture));
+    }
+
+    private static String javap(Path file) throws Exception {
+        File javap = new File(System.getProperty("java.home"), "bin/javap");
+        Path out = Files.createTempFile("javap-out-", ".txt");
+        Path err = Files.createTempFile("javap-err-", ".txt");
+        try {
+            Process process = new ProcessBuilder(
+                    javap.getAbsolutePath(), "-v", file.toAbsolutePath().toString())
+                    .redirectOutput(out.toFile())
+                    .redirectError(err.toFile())
+                    .start();
+            int rc = process.waitFor();
+            String stdout = new String(Files.readAllBytes(out), StandardCharsets.UTF_8);
+            String stderr = new String(Files.readAllBytes(err), StandardCharsets.UTF_8);
+            assertEquals(0, rc, "javap failed for " + file + ":\n" + stdout + stderr);
+            return stdout + stderr;
+        } finally {
+            Files.deleteIfExists(out);
+            Files.deleteIfExists(err);
+        }
     }
 }
